2004-05-19  JP Rosevear  <jpr@novell.com>

	* Makefile.am: don't dist the error .h file

2004-05-18  Not Zed  <NotZed@Ximian.com>

	* mail-composer-errors.xml: set the default for exit-unsaved to
	save, as in 1.4.  #57995.

	* e-msg-composer-hdrs.c (post_browser_clicked_cb): fix for folder
	selector api change.

2004-05-12  Not Zed  <NotZed@Ximian.com>

	* mail-composer-errors.xml.h: add for translators.

	* mail-composer-errors.xml: renamed from xml.in file.

	* Makefile.am: Fix for i18n build stuff.

2004-05-11  Jeffrey Stedfast  <fejj@novell.com>

	* e-msg-composer.c (build_message): Use CAMEL_EXCEPTION_SYSTEM
	instead of '1', also don't use camel_exception_setv() if we aren't
	using the printf-style arguments. Just use camel_exception_set() -
	safer anyway, since then we don't have to worry about translated
	strings containing printf-style formatters that could break stuff.

2004-05-08  Enver ALTIN <enver.altin@frontsite.com.tr>

	* e-msg-composer.c: Fixing parts of #53466.

2004-05-03  Not Zed  <NotZed@Ximian.com>

	* e-msg-composer.c: header cleanups.

2004-04-28  Not Zed  <NotZed@Ximian.com>

	** Changed error messages to EError.

2004-04-27  Not Zed  <NotZed@Ximian.com>

	* e-msg-composer-attachment-bar.c (update): duh, pass the string
	not the content type to the warning message.  And derrr, print it
	for the actual error case, not the ok case.  Fixes #57680.

2004-04-26  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer.c (autosave_load_draft): Only unlink the original
	autosave draft file if we are successful in saving a new copy,
	otherwise don't unlink the file. Fixes bug #57540.

2004-04-23  Not Zed  <NotZed@Ximian.com>

	* e-msg-composer-attachment-bar.c (update): fallback to stock
	unknown if we can't ifnd the icon.  #56717.

2004-04-19  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer.c (create_composer): Use the E_ICON_SIZE enums
	rather than specifying an absolute pixel size.

2004-04-19  Michael Terry  <mike@mterry.name>
